@@ -1,5 +1,6 @@
 2010-07-19  Tolleiv Nietsch <nietsch@aoemedia.de>
 
+	* Fixed issue: #13699: static Data Structures not listed in the TemplaVoilà Control Center
 	* Fixed issue: #15178: FCE editing forms should match built-in content elements (Thanks to Jeff Segars)
 
 2010-07-17  Tolleiv Nietsch <nietsch@aoemedia.de>
